<resources>
    <string name="app_name">BMI_app</string>
    <string name="hint_wt">Enter your Weight</string>
    <string name="hint_htF">Enter your Height(in Ft)</string>
    <string name="hint_htI">Enter your Height(in In)</string>
    <string name="btn_calc">Calculate BMI</string>
    <string name="result">Result</string>
    <string name="you_re_overweight">You\'re OverWeight</string>
    <string name="you_re_underweight">You\'re UnderWeight</string>
    <string name="you_re_healthy">You\'re Healthy!!</string>
</resources>
